<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="title"
                type="com.arnab.notepad.views.viewhelpers.ObservableEditText"/>
        <variable
                name="content"
                type="com.arnab.notepad.views.viewhelpers.ObservableEditText"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:focusedByDefault="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            tools:context=".views.activity.AddNoteActivity">


        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textAutoCorrect"
                android:hint="Subject"
                android:padding="5dp"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:text="@={title.text}"
                android:maxLines="1"
                android:maxLength="50"
                android:id="@+id/et_subject"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:gravity="start|top"
                android:padding="5dp"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:text="@={content.text}"
                android:minLines="5"
                android:hint="Description"
                android:id="@+id/et_description"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_subject"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/floatingActionButton"
                android:src="@drawable/ic_save"
                app:backgroundTint="@color/colorPrimaryLight"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>