<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
                name="viewModel"
                type="com.arnab.notepad.viewModels.MainActivityViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/root"
            tools:context=".views.activity.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_add_note"
                android:src="@drawable/ic_note_add"
                android:padding="0dp"
                app:backgroundTint="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>